# Space_Weather_Predictor

./: .gitattributes  .gitignore  BIG_PROBLEM.md  FINAL_ARCHITECTURE.md  README.md  architecture_decision_SO2.md  architecture_discussion.md  architecture_locked.md  falisha_dataset_instructions.md  falisha_instructions.md  iri_probe.py  person2_deliverables.md  pluh.py  project_breakdown.md  pull_f107  pyproject.toml  space_weather_predictor_overview.md  space_weather_spherical_cnn.md  tec_globe_tech_stack.md  tec_maps_roadmap.md  tec_sfno_residual_realdata_latest.ipynb  tec_sfno_test_eval_latest.ipynb  test.py  visualization_spec.md
data_pull/: PIPELINE.md  data_for_falisha.py  data_interpolation.py  data_pull_design.md  data_time.py  data_transformation.py  export_dtec_sample.py  falisha_dataset.py  geomag_pull.py  offset.py  sakshum.py  test.py  yeet.py
lmax_derivations/: lmax_derivation.py  lmax_derivation_post_IRI.ipynb  lmax_derivation_pre_IRI.ipynb  sakshum_lmax_sample.npz
scripts/: migrate_to_medallion.py
src/swp_data/: assemble.py  cli.py  config.py  dataset.py  extract.py  interpolate.py  parse.py  runlog.py  settings.py
src/swp_data.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
station_selection/: candidates.parquet
supermag/: station_selection.py  super_mag_pull.py  supermag_pull_design.md  test.py
supermag/station_selection/: candidates.parquet  coverage.parquet  pandas_help.py  presence.parquet
supermag/supermag_data/: _manifest.json
testing_data_sources/: omni_data.py  swpc_data.py
toy_model/: error.txt
(+7573 files in other folders)
